<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cart_item_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        />


    <TextView
        android:id="@+id/cart_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_name"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cart_item_image" />

    <TextView
        android:id="@+id/cart_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_content"
        android:textSize="18sp"
        android:paddingRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cart_item_image"
        android:layout_below="@id/cart_item_name" />

    <TextView
        android:id="@+id/cart_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_ron"
        android:layout_margin="5dp"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cart_item_name" />





</RelativeLayout>